Add X users online and adjust CSS by using display flex and justify content flex end

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -86,3 +86,8 @@ body {
   padding: 0 10px;
   text-decoration: none;
 }
+
+.users-online-display{
+  display: flex; 
+  justify-content: flex-end;
+}
